# cmake-template

./: .gitignore  CMakeLists.txt  CTestCustom.cmake  Dockerfile  dockerstart.sh  run.sh
src/: CMakeLists.txt  CTestCustom.cmake  README  gtest2txt.xsl  profilingtools.txt  valgrind.txt
src/libbla/: bla.cpp  bla.h
src/main/: foo.cpp
src/soc-configuration/: CMakeLists.txt
src/src/libbla/: CMakeLists.txt
src/src/main/: CMakeLists.txt  foo.h  main.cpp
src/tests/unit/libbla-unittest/: bla-mock.h  bla-unittest.h
src/tests/unit/testrunner/: testrunner.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/libbla-unittest/: CMakeLists.txt  bla-unittest.cpp  bla-unittest.h  socperfctrlserver-unittest.cpp  socperfctrlserver-unittest.h  socperfctrltestproxy.cpp  socperfctrltestproxy.h
tests/unit/testrunner/: CMakeLists.txt  testrunner.cpp
